<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright and authors: see LICENSE.txt in base repository.

This software is a web portal for pipeline execution on distributed systems.

This software is governed by the CeCILL-B license under French law and
abiding by the rules of distribution of free software.  You can  use,
modify and/ or redistribute the software under the terms of the CeCILL-B
license as circulated by CEA, CNRS and INRIA at the following URL
"http://www.cecill.info".

As a counterpart to the access to the source code and  rights to copy,
modify and redistribute granted by the license, users are provided only
with a limited warranty  and the software's author,  the holder of the
economic rights,  and the successive licensors  have only  limited
liability.

In this respect, the user's attention is drawn to the risks associated
with loading,  using,  modifying and/or developing or reproducing the
software by the user in light of its specific status of free software,
that may mean  that it is complicated to manipulate,  and  that  also
therefore means  that it is reserved for developers  and  experienced
professionals having in-depth computer knowledge. Users are therefore
encouraged to load and test the software's suitability as regards their
requirements in conditions enabling the security of their systems and/or
data to be ensured and,  more generally, to use and operate it in the
same conditions as regards security.

The fact that you are presently reading this means that you have had
knowledge of the CeCILL-B license and that you accept its terms.

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.insalyon.creatis</groupId>
    <artifactId>vip</artifactId>
    <packaging>pom</packaging>
    <version>${revision}${sha1}${changelist}</version>
    <name>VIP</name>

    <properties>
        <!-- project version. Only to change it here (and in CoreConstants.java
           Follow this practice : https://maven.apache.org/maven-ci-friendly.html-->
        <revision>2.4.1</revision>
        <changelist></changelist>
        <sha1/>

        <!-- other maven config -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>


        <!-- VIP related dependencies version -->
        <moteur2-workflowsdb-common.version>1.6</moteur2-workflowsdb-common.version>
        <grida.version>2.2.0</grida.version>
        <sma.version>0.3.0</sma.version>

        <!-- 3rd party dependencies version -->
        <junit.version>5.6.2</junit.version>
        <spring-framework.version>5.3.15</spring-framework.version>
        <springsecurity.version>5.6.1</springsecurity.version>
        <springoauth.version>5.6.1</springoauth.version>
        <jackson.version>2.11.0</jackson.version>
        <h2database.version>1.3.173</h2database.version>
    </properties>

    <description>VIP</description>
    <inceptionYear>2010</inceptionYear>
    <url>http://vip.creatis.insa-lyon.fr:9002/projects/vip</url>
    <licenses>
        <license>
            <name>CeCILL-B, Version 1.0</name>
            <url>http://www.cecill.info/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>CREATIS</name>
        <url>http://www.creatis.insa-lyon.fr/</url>
    </organization>

    <modules>
        <module>vip-core</module>
        <module>vip-docs</module>
        <module>vip-application</module>
        <module>vip-publication</module>
        <module>vip-datamanagement</module>
        <module>vip-gatelab</module>
        <module>vip-portal</module>
        <module>vip-application-importer</module>
        <module>vip-social</module>
        <module>vip-api</module>
        <module>vip-visualization</module>
        <module>vip-local</module>
        <module>coverage</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt</artifactId>
                <version>2.8.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.isomorphic.smartgwt.lgpl</groupId>
                <artifactId>smartgwt-lgpl</artifactId>
                <version>12.0p</version>
            </dependency>

            <!-- empty jars to ensure commons logging and log4j is not
              used in project and not present in final war -->
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>99-empty</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>99-empty</version>
            </dependency>

            <!-- logging libs -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.30</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.2.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Test dependencies -->

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring-framework.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2database.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.h-thurow</groupId>
            <artifactId>simple-jndi</artifactId>
            <version>0.23.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.6.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <version>${springsecurity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.2.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>


    </dependencies>


    <repositories>

        <repository>
            <id>creatis</id>
            <name>Creatis Insa Lyon repository [creatis]</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/public</url>
        </repository>

        <!-- repo used to get empty jar for commons logging and log4j -->
        <repository>
            <id>version99</id>
            <!-- highly available repository serving empty artifacts -->
            <url>https://version99.qos.ch/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>creatis-releases</id>
            <name>Internal Releases</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/releases</url>
        </repository>

        <snapshotRepository>
            <id>creatis-snapshots</id>
            <name>Internal Snapshots</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/snapshots</url>
        </snapshotRepository>

    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <!-- needed to replace the artifact version when calling install or deploy -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M7</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
